--- a/api/frontend-react/package.json
+++ b/api/frontend-react/package.json
@@ -3,15 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "mdbreact": "^4.25.4",
-    "react": "^16.13.0",
+    "react": "^16.13.1",
+    "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
+    "react-responsive-sidebar": "^0.1.16",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-transition-group": "^4.3.0",
