--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.4"
+    "mongoose": "^5.9.4",
+    "react-bootstrap-sidebar": "0.0.1"
   }
 }
