--- a/api/frontend-react/package.json
+++ b/api/frontend-react/package.json
@@ -11,13 +11,14 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
+    "install": "^0.13.0",
     "mdbreact": "^4.25.4",
     "react": "^16.13.1",
     "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.13.0",
     "react-redux": "^7.2.0",
     "react-responsive-sidebar": "^0.1.16",
-    "react-router-dom": "^5.1.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-transition-group": "^4.3.0",
     "react-uuid": "^1.0.2",
