--- a/api/frontend-react/package.json
+++ b/api/frontend-react/package.json
@@ -13,9 +13,11 @@
     "bootstrap": "^4.4.1",
     "install": "^0.13.0",
     "mdbreact": "^4.25.4",
+    "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap-sidebar": "0.0.1",
     "react-dom": "^16.13.0",
+    "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-responsive-sidebar": "^0.1.16",
     "react-router-dom": "^5.2.0",
