--- a/api/frontend-react/package.json
+++ b/api/frontend-react/package.json
@@ -20,6 +20,7 @@
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
     "react-responsive-sidebar": "^0.1.16",
+    "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-transition-group": "^4.3.0",
