--- a/api/frontend-react/package.json
+++ b/api/frontend-react/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "install": "^0.13.0",
+    "material-table": "^1.68.0",
     "mdbreact": "^4.25.4",
     "moment": "^2.27.0",
     "react": "^16.13.1",
