--- a/api/frontend-react/package.json
+++ b/api/frontend-react/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.27.0",
     "react": "^16.13.1",
     "react-bootstrap-sidebar": "0.0.1",
+    "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.0",
     "react-moment": "^0.9.7",
     "react-redux": "^7.2.0",
