--- a/api/package.json
+++ b/api/package.json
@@ -24,6 +24,7 @@
     "install": "^0.13.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.4",
-    "react-bootstrap-sidebar": "0.0.1"
+    "react-bootstrap-sidebar": "0.0.1",
+    "react-datepicker": "^3.1.3"
   }
 }
