--- a/api/frontend-react/package.json
+++ b/api/frontend-react/package.json
@@ -15,6 +15,7 @@
     "material-table": "^1.68.0",
     "mdbreact": "^4.25.4",
     "moment": "^2.27.0",
+    "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
     "react-bootstrap-sidebar": "0.0.1",
     "react-datepicker": "^3.1.3",
