--- a/api/frontend-react/package.json
+++ b/api/frontend-react/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.27.0",
     "moment-timezone": "^0.5.31",
     "nanoid": "^3.1.12",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap-sidebar": "0.0.1",
     "react-datepicker": "^3.1.3",
