--- a/api/frontend-react/package.json
+++ b/api/frontend-react/package.json
@@ -20,9 +20,11 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-bootstrap-sidebar": "0.0.1",
+    "react-coverflow": "^0.2.20",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.0",
     "react-moment": "^0.9.7",
+    "react-multi-carousel": "^2.5.5",
     "react-redux": "^7.2.0",
     "react-responsive-sidebar": "^0.1.16",
     "react-router": "^5.2.0",
